# soft-rasterizer

./: .gitignore  CMakeLists.txt  OBJ_Loader.h  README.md  assimp_importer.hpp  blinn_phong.hpp  common_header.hpp  display.hpp  image.cpp  image.hpp  ld_obj_loader.hpp  main.cpp  matrix.hpp  rasterizer.hpp  shader.hpp  simple_color.hpp  simple_gray.hpp  soft_rasterizer.sln  soft_rasterizer.vcxproj  transforms.hpp  utils.cpp  utils.hpp
samples/Keqing/: Keqing.mtl
samples/normalmap/: normalmap.mtl
